# lumina

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  meson.build  meson_options.txt
build-aux/: cargo-build.sh
data/: me.rueegger.Lumina.desktop.in.in  me.rueegger.Lumina.gschema.xml.in  me.rueegger.Lumina.metainfo.xml.in  meson.build
data/icons/: meson.build
data/resources/templates/: blank.json  photo-album.json  title-content.json
flatpak/: me.rueegger.Lumina.yml
po/: POTFILES.in  de.po  meson.build
src/: application.rs  config.rs  i18n.rs  main.rs  meson.build  templates.rs
src/format/: mod.rs
src/format/odp/: constants.rs  mod.rs  reader.rs  writer.rs
src/format/pptx/: constants.rs  mod.rs  reader.rs
src/model/: document.rs  element.rs  geometry.rs  image.rs  mod.rs  shape.rs  slide.rs  style.rs  text.rs
src/render/: engine.rs  image_render.rs  mod.rs  pdf_export.rs  shape_render.rs  text_render.rs
src/ui/: canvas_view.rs  mod.rs  properties_panel.rs  slide_panel.rs  window.rs
src/ui/canvas/: interaction.rs  mod.rs  selection.rs  tool.rs
