[package]
name = "lumina"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "A presentation application for the GNOME desktop"
rust-version = "1.80"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
gdk = { version = "0.9", package = "gdk4" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1"

[profile.release]
lto = true
opt-level = "s"
strip = true
