[package]
name = "lumina"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
description = "A presentation application for the GNOME desktop"
rust-version = "1.80"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
gdk = { version = "0.9", package = "gdk4" }
cairo-rs = { version = "0.20", features = ["pdf", "png"] }
pango = "0.20"
pangocairo = "0.20"
gdk-pixbuf = "0.20"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"

[profile.release]
lto = true
opt-level = "s"
strip = true
